--- a/app/demo_test_lexer_in_editor/demo.lpi
+++ b/app/demo_test_lexer_in_editor/demo.lpi
@@ -24,16 +24,19 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="3">
+    <RequiredPackages Count="4">
       <Item1>
-        <PackageName Value="atsynedit_ex_package"/>
+        <PackageName Value="econtrol_package"/>
       </Item1>
       <Item2>
-        <PackageName Value="atsynedit_package"/>
+        <PackageName Value="atsynedit_ex_package"/>
       </Item2>
       <Item3>
-        <PackageName Value="LCL"/>
+        <PackageName Value="atsynedit_package"/>
       </Item3>
+      <Item4>
+        <PackageName Value="LCL"/>
+      </Item4>
     </RequiredPackages>
     <Units Count="2">
       <Unit0>
